--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pug-loader": "^2.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   }
 }
