--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.1",
     "node-static": "^0.7.10",
+    "normalize.css": "^8.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.3",
