--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "gquery": "^0.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
